add rails server and minitest config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,37 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Minitest - current line",
+      "name": "Rails server",
       "type": "Ruby",
+      "request": "launch",
       "cwd": "${workspaceRoot}",
+      "program": "${workspaceRoot}/bin/rails",
+      "env": {
+        "PATH": "/Users/vmcilwain/.rvm/gems/ruby-2.6.5/bin:/Users/vmcilwain/.rvm/gems/ruby-2.6.5@global/bin:/Users/vmcilwain/.rvm/rubies/ruby-2.6.5/bin:/Users/vmcilwain/.rvm/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Applications/VMware Fusion.app/Contents/Public:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/usr/local/sbin:/usr/local/mysql/bin:/Users/vmcilwain/bin:/usr/local/mysql/bin:/Users/vmcilwain/bin:/usr/local/bin",
+        "GEM_HOME": "/Users/vmcilwain/.rvm/gems/ruby-2.6.5",
+        "GEM_PATH": "/Users/vmcilwain/.rvm/gems/ruby-2.6.5:/Users/vmcilwain/.rvm/gems/ruby-2.6.5@global",
+        "RUBY_VERSION": "ruby-2.6.5"
+      },
+      "args": [
+          "server"
+      ]
+    },
+    {
+      "cwd": "${workspaceRoot}",
+      "name": "Minitest - Run at cursor position",
+      "type": "Ruby",
       "request": "launch",
       "program": "${workspaceRoot}/bin/rails",
+      "env": {
+        "PATH": "/Users/vmcilwain/.rvm/gems/ruby-2.6.5/bin:/Users/vmcilwain/.rvm/gems/ruby-2.6.5@global/bin:/Users/vmcilwain/.rvm/rubies/ruby-2.6.5/bin:/Users/vmcilwain/.rvm/bin:/usr/local/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Applications/VMware Fusion.app/Contents/Public:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/usr/local/sbin:/usr/local/mysql/bin:/Users/vmcilwain/bin:/usr/local/mysql/bin:/Users/vmcilwain/bin:/usr/local/bin",
+        "GEM_HOME": "/Users/vmcilwain/.rvm/gems/ruby-2.6.5",
+        "GEM_PATH": "/Users/vmcilwain/.rvm/gems/ruby-2.6.5:/Users/vmcilwain/.rvm/gems/ruby-2.6.5@global",
+        "RUBY_VERSION": "ruby-2.6.5"
+      },
       "args": [
         "test",
         "${file}:${lineNumber}"
       ]
-    }
+    },
   ]
 }
