--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Listen for rdebug-ide",
+      "type": "Ruby",
+      "request": "attach",
+      "remoteHost": "127.0.0.1",
+      "remotePort": "1234",
+      "remoteWorkspaceRoot": "/app"
+      // "remoteWorkspaceRoot": "${workspaceRoot}"
+    },
+    {
       "name": "Minitest - current line",
       "type": "Ruby",
       "cwd": "${workspaceRoot}",
